2006-11-23  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev, tmw.cbp: Updated project files.

2006-11-19  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/setup_joystick.cpp: Fixed joystick option to show enabled
	when the joystick is enabled.
	*  src/localplayer.cpp, src/game.cpp, src/action.h, src/action.cpp,
	src/player.cpp, src/animatedsprite.h, src/being.cpp, src/animation.h,
	src/monster.cpp, src/CMakeLists.txt, src/player.h,
	src/animatedsprite.cpp, src/localplayer.h, src/animation.cpp,
	src/Makefile.am, src/being.h, src/resources/resourcemanager.cpp,
	src/resources/spritedef.cpp, src/resources/resourcemanager.h,
	src/resources/spriteset.h, src/resources/spritedef.cpp: Separated
	sprite definition from playback.

2006-11-17  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* data/graphics/sprites/CMakeLists.txt: Fixed some filenames.

2006-11-17  Wai Ling Tsang  <simotsa@gmail.com>

	* src/gui/gui.cpp: Added mouse following ability/feature under
	logic().
	* src/gui/gui.h: Added mouseMotion(), mouseRelease() and private
	variables for mouse following.

2006-11-05  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/Woodland_village.png,
	data/graphics/tiles/Woodland_village_x2.png,
	data/graphics/tiles/Woodland_x2.png,
	data/graphics/tiles/Makefile.AM,
	data/graphics/tiles/CMakeList.txt,
	data/maps/new_9-1.tmx.gz, data/maps/new_14-1.tmx.gz,
	data/maps/new_15-1.tmx.gz, data/maps/new_16-1.tmx.gz,
	data/maps/new_17-1.tmx.gz, data/maps/new_18-1.tmx.gz,
	data/maps/new_19-1.tmx.gz, data/maps/CMakeList.txt,
	data/maps/Makefile.AM:
	Added woodland village outdoor tileset and maps. Modified gates on
	the nearby maps.

2006-11-15  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/animatedsprite.h, src/CMakeLists.txt, src/animatedsprite.cpp,
	src/utils/xml.cpp, src/utils/xml.h, src/Makefile.am,
	src/resources/mapreader.cpp: Separated getProperty method to an XML
	utility namespace.

2006-11-15  Eugenio Favalli  <elvenprogrammer@gmail.com>
