@@ -32,7 +32,7 @@
 
 #include "../npc.h"
 
-#include "../resources/itemmanager.h"
+#include "../resources/itemdb.h"
 
 #include "../net/messageout.h"
 #include "../net/protocol.h"
@@ -267,7 +267,7 @@ void BuyDialog::selectionChanged(const SelectionEvent &event)
     if (selectedItem > -1)
     {
         const ItemInfo &info =
-            itemDb->getItemInfo(mShopItems->at(selectedItem).id);
+            ItemDB::get(mShopItems->at(selectedItem).id);
 
         mItemDescLabel->setCaption("Description: " + info.getDescription());
         mItemEffectLabel->setCaption("Effect: " + info.getEffect());
