@@ -40,7 +40,7 @@
 #include "../npc.h"
 
 #include "../resources/iteminfo.h"
-#include "../resources/itemmanager.h"
+#include "../resources/itemdb.h"
 
 extern std::string tradePartnerName;
 
@@ -106,7 +106,7 @@ void PopupMenu::showPopup(int x, int y, FloorItem *floorItem)
     mBrowserBox->clearRows();
 
     // Floor item can be picked up (single option, candidate for removal)
-    std::string name = itemDb->getItemInfo(mFloorItem->getItemId()).getName();
+    std::string name = ItemDB::get(mFloorItem->getItemId()).getName();
     mBrowserBox->addRow("@@pickup|Pick Up " + name + "@@");
 
     //browserBox->addRow("@@look|Look To@@");
