@@ -37,7 +37,7 @@
 #include "../npc.h"
 
 #include "../resources/iteminfo.h"
-#include "../resources/itemmanager.h"
+#include "../resources/itemdb.h"
 
 #include "../net/messageout.h"
 #include "../net/protocol.h"
@@ -277,7 +277,7 @@ void SellDialog::selectionChanged(const SelectionEvent &event)
     if (selectedItem > -1)
     {
         const ItemInfo &info =
-            itemDb->getItemInfo(mShopItems->at(selectedItem).id);
+            ItemDB::get(mShopItems->at(selectedItem).id);
 
         mItemDescLabel->setCaption("Description: " + info.getDescription());
         mItemEffectLabel->setCaption("Effect: " + info.getEffect());
