@@ -95,7 +95,7 @@ void InventoryHandler::handleMessage(MessageIn *msg)
             if (msg->readInt8()> 0) {
                 chatWindow->chatLog("Unable to pick up item", BY_SERVER);
             } else {
-                const ItemInfo &itemInfo = itemDb->getItemInfo(itemId);
+                const ItemInfo &itemInfo = ItemDB::get(itemId);
                 chatWindow->chatLog("You picked up a " +
                         itemInfo.getName(), BY_SERVER);
                 player_node->addInvItem(index, itemId, amount, equipType != 0);
